--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "sass": "^1.93.3",
+    "typescript": "^5"
   }
 }
