--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev -p 3000",
+    "dev": "next dev -p 3000",
+    "serve": "serve dist -l 3000",
     "build": "next build",
-    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
